--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "
 locale                   : "ko-KR"
 title                    : "기록하는 개발자"
 title_separator          : "&#124;"
-subtitle                 : "Version 1.0" # site tagline that appears below site title in masthead
+subtitle                 : "Yungi_baby's  Version 1.0" # site tagline that appears below site title in masthead
 name                     : "이윤기"
 description              : "다양한 개발을 공부하는 블로그"
 url                      : "https://qmakzl.github.io" # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
@@ -27,13 +27,13 @@ baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "qmakzl/qmakzl.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : "기록하는 개발자 Blog" # overrides the website title displayed in the masthead, use " " for no title
+masthead_title           : "기록하는 개발자 Yungi_Baby's Blog" # overrides the website title displayed in the masthead, use " " for no title
 breadcrumbs              : true # true, false (default)
 words_per_minute         : 200
 comments:
   provider               : "disqus" # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "custom"
   disqus:
-    shortname            : "qmakzl" # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
+    shortname            : qmakzl # https://help.disqus.com/customer/portal/articles/466208-what-s-a-shortname-
   discourse:
     server               : # https://meta.discourse.org/t/embedding-discourse-comments-via-javascript/31963 , e.g.: meta.discourse.org
   facebook:
@@ -111,7 +111,7 @@ analytics:
 author:
   name             : "이윤기"
   avatar           : "/assets/images/profile/60avn.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio              : "꾸준히 공부하는 개발자입니다. <br> 블로그 포스트 글에서 잘못된 부분이나 수정했으면 하는 부분, 적극적으로 댓글 남겨주신다면 감사하겠습니다."
+  bio              : "꾸준히 공부하는 개발자입니다. <br> 블로그 포스트 글에서 잘못된 부분이나 수정했으면 하는 부분, <br> 적극적으로 댓글 남겨주신다면 감사하겠습니다."
   location         : "Republic of Korea"
   email            : "qmakzl1@naver.com"
   links:
