--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "mint" # "air", "aqua", "contrast", "dark", "dirt", "
 
 # Site Settings
 locale                   : "ko-KR"
-title                    : "기록하는 개발자" 
+title                    : "기록하고 이것저것 하는 개발자" 
 title_separator          : "&#124;"  
 subtitle                 : "Yungi_baby's  Version 1.0" # site tagline that appears below site title in masthead
 name                     : "이윤기" 
